# Smart-Product-Search

./: .gitignore  HYBRID_SEARCH_GUIDE.md  MONGODB_STATUS.md  PERFORMANCE_REPORT.md  QUICKSTART.md  QUICK_START.md  README.md  add_fields.py  api.py  download_nltk.py  main.py  pyproject.toml  render.yaml  requirements.txt  run_all_tests.py  test_hybrid_search.py
app/: __init__.py  main.py
app/core/: config.py  database.py
app/models/: schemas.py
app/services/: hybrid_search.py  keyword_search.py  keyword_search_cli.py  search.py
app/services/lib/: keyword_search.py  search_utils.py
lib/: semantic_search.py
tests/: test_memory.py  test_performance.py  test_throughput.py
