[project]
name = "materialmoversearch"
version = "0.1.0"
description = "Semantic construction material search API powered by FastAPI and sentence transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.1.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pymongo>=4.15.0",
]
